--- a/flutter/basic_app/__brick__/{{appName.snakeCase()}}/android/app/src/main/res/values-night/styles.xml
+++ b/flutter/basic_app/__brick__/{{appName.snakeCase()}}/android/app/src/main/res/values-night/styles.xml
@@ -5,7 +5,7 @@
     <style name="LaunchTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Show a splash screen on the activity. Automatically removed when
              Flutter draws its first frame -->
-        <item name="android:windowBackground">@drawable/launch_background</item>
+        <!-- <item name="android:windowBackground">@drawable/launch_background</item> -->
         <item name="android:forceDarkAllowed">false</item>
         <item name="android:windowFullscreen">false</item>
         <item name="android:windowDrawsSystemBarBackgrounds">false</item>
